fixed button alignments, added styling

--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-style: solid;
-  border-color: cyan;
 }
 
 .calculator-container {
@@ -53,45 +51,71 @@ body {
   margin-bottom: 50px;
   border-style: solid;
   border-color: cyan;
+  border-radius: 50px;
+  background-color: #292f36;
 }
 
 .screen-container {
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
   margin-top: 50px;
   width: 450px;
   height: 100px;
-  border-color: black;
+  border-color: white;
+  border-radius: 4px;
   border-style: solid;
+  border-width: 2px;
+  font-size: 50px;
+  background-color: #292f36;
+  color: white;
 }
 
 .buttons-container {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   margin-top: 50px;
   margin-bottom: 50px;
   width: 450px;
   height: 500px;
-  border-color: red;
-  border-style: solid;
 }
-.buttons-container > div {
-  display: flex;
-  flex-direction: column;
-  height: auto;
-  flex: 1 1 auto;
+.buttons-container > button {
+  flex-basis: calc(20% - 10px);
+  margin: 5px;
+  color: ghostwhite;
+  border: 3px solid ghostwhite;
+  text-align: center;
+  line-height: 1;
+  background-color: transparent;
+  outline: none;
+  border-radius: 4px;
+  font-size: 18px;
+  transition: all 0.5s ease;
 }
-.buttons-container > div > * {
-  flex: 1;
-  border-style: dashed;
-  border-color: rgb(58, 45, 45);
+.buttons-container > button.equalSign {
+  flex-grow: 2;
 }
 
-.grid-cell {
-  width: 150px; /* Set a fixed width for the buttons */
-  height: 150px; /* Set a fixed height for the buttons */
-  margin: 5px; /* Add some margin to create space between buttons */
-  border: 1px solid black; /* Add border for visual separation */
+.buttons-container > button.operations {
+  border-color: #ffff00;
+}
+
+.buttons-container > button.clearDelete {
+  border-color: #ff00ff;
+}
+
+button:hover {
+  color: white;
+  background-color: #292f36;
+  cursor: pointer;
+  border-color: cyan;
+}
+
+/* Footer */
+.footer {
+  display: flex;
+  justify-content: center;
+  font: 17px;
 }
